--- a/client/src/App.css
+++ b/client/src/App.css
@@ -74,6 +74,21 @@ select {
 .bg-complete {
   background-color: #2e2e2e; }
 
+.c-initialized {
+  color: #eeeeee; }
+
+.c-submitted {
+  color: #126c83; }
+
+.c-retrieving {
+  color: #d36600; }
+
+.c-retrieved {
+  color: #0c7214; }
+
+.c-complete {
+  color: #2e2e2e; }
+
 .modal .modal-dialog {
   vertical-align: middle; }
 
@@ -476,25 +491,34 @@ select {
     top: -2.5rem;
     left: 50%;
     transform: translateX(-50%); }
-.retrieve .retrieve-items-list .list-group-item {
+.retrieve .retrieve-items-list .retrieve-item .list-group-item {
   height: 4rem;
   background-color: #eeeeee; }
-.retrieve .retrieve-items-list .retrieve-items-name {
+  .retrieve .retrieve-items-list .retrieve-item .list-group-item:not(.requested) {
+    background-color: #a0a0a0; }
+.retrieve .retrieve-items-list .retrieve-item .retrieve-items-name {
   margin: 0 1rem; }
-.retrieve .retrieve-items-list .item-not-found {
+.retrieve .retrieve-items-list .retrieve-item .card-body {
+  height: 3rem;
+  width: 100%;
+  background-color: #4b4b4b;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+.retrieve .retrieve-items-list .retrieve-item .item-not-found {
   padding: 0;
   margin-top: 1rem; }
-  .retrieve .retrieve-items-list .item-not-found .item-not-found-btn {
+  .retrieve .retrieve-items-list .retrieve-item .item-not-found .item-not-found-btn {
     width: 100%;
     height: 3rem; }
-.retrieve .retrieve-items-list .retrieve-item {
+.retrieve .retrieve-items-list .retrieve-item .retrieve-item-success {
   padding: 0;
   margin-bottom: 1rem; }
-  .retrieve .retrieve-items-list .retrieve-item .retrieve-item-btn {
+  .retrieve .retrieve-items-list .retrieve-item .retrieve-item-success .retrieve-item-success-btn {
     width: 100%;
     height: 3rem;
     background-color: #a10000; }
-    .retrieve .retrieve-items-list .retrieve-item .retrieve-item-btn i {
+    .retrieve .retrieve-items-list .retrieve-item .retrieve-item-success .retrieve-item-success-btn i {
       color: #eeeeee; }
 
 .library {
